--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:css": "tailwindcss -i src/styles.css -o public/main.css --watch"
+    "build:css": "tailwindcss -i src/styles.css -o public/main.css --watch",
+    "serve": "vite preview",
+    "build:vite": "vite build",
+    "dev": "vite"
   },
   "keywords": [],
   "author": "Fizzy_One13",
   "license": "ISC",
   "devDependencies": {
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "vite": "^4.2.1"
   }
 }
